<resources>
    <string name="app_name">Biz-able</string>
    <string name="nav_main">메인</string>
    <string name="nav_search">조회</string>
    <string name="nav_phonebook">비상연락망</string>
    <string name="nav_settings">설정</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">담당자</string>
    <string name="user_job">업무</string>
    <string name="job_name_is_null">업무 정보 없음</string>

    <string name="my_batch">My</string>
    <string name="all_batch">All</string>
    <string name="batch_status">Batch 현황</string>
</resources>