<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_tab_main"
        android:title="@string/nav_main"
        android:icon="@drawable/ic_icon_tab_bar_main"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/bottom_tab_search"
        android:title="@string/nav_search"
        android:icon="@drawable/ic_icon_tab_bar_search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/bottom_tab_phonebook"
        android:title="@string/nav_phonebook"
        android:icon="@drawable/ic_icon_tab_bar_phone_book"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/bottom_tab_settings"
        android:title="@string/nav_settings"
        android:icon="@drawable/ic_icon_tab_bar_settings"
        app:showAsAction="ifRoom"/>
</menu>
