<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".feature.main.MainFragment">

    <data>

        <variable
            name="fragment"
            type="com.ktigers20.mez.feature.main.MainFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo_img"
            android:layout_width="120dp"
            android:layout_height="18dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:background="#00000000"
            android:src="@drawable/kb_main_logo_img"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/alarmImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_bell"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/main_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            app:layout_constraintTop_toTopOf="parent"
            app:tabIndicatorColor="@color/kbYellow"
            app:tabSelectedTextColor="@color/kbYellow"
            app:tabTextAppearance="@style/tab_text"
            app:tabTextColor="@color/kbLine">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/my_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_batch" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/all_tab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/all_batch" />

        </com.google.android.material.tabs.TabLayout>

        <TextView
            android:id="@+id/batch_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:text="@string/batch_status"
            android:textColor="@color/text"
            android:textSize="27sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_tab_layout" />

        <ImageView
            android:id="@+id/status_legend"
            android:layout_width="180dp"
            android:layout_height="18dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="45dp"
            android:src="@drawable/status_legend"
            app:layout_constraintLeft_toRightOf="@id/batch_status"
            app:layout_constraintTop_toBottomOf="@id/main_tab_layout" />

        <TextView
            android:id="@+id/oper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="90dp"
            android:text="업무계"
            android:textColor="@color/text"
            android:textSize="12sp"
            app:layout_constraintRight_toLeftOf="@id/chart_layout"
            app:layout_constraintTop_toBottomOf="@id/batch_status" />

        <TextView
            android:id="@+id/edw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="90dp"
            android:text="기간계"
            android:textColor="@color/text"
            android:textSize="12sp"
            app:layout_constraintRight_toLeftOf="@id/chart_layout"
            app:layout_constraintTop_toBottomOf="@id/oper" />

        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="90dp"
            android:text="정보계"
            android:textColor="@color/text"
            android:textSize="12sp"
            app:layout_constraintRight_toLeftOf="@id/chart_layout"
            app:layout_constraintTop_toBottomOf="@id/edw" />


        <FrameLayout
            android:id="@+id/chart_layout"
            android:layout_width="390dp"
            android:layout_height="350dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="33dp"
            android:background="@color/background"
            android:elevation="2dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/batch_status">

<!--            <View-->
<!--                android:layout_width="0.3dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_gravity="center_horizontal"-->
<!--                android:alpha="0.9"-->
<!--                android:background="@android:color/darker_gray" />-->

<!--            <View-->
<!--                android:layout_width="0.3dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_gravity="center_horizontal"-->
<!--                android:alpha="0.9"-->
<!--                android:background="@android:color/darker_gray" />-->

<!--            <View-->
<!--                android:layout_width="0.3dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_marginStart="250dp"-->
<!--                android:alpha="0.9"-->
<!--                android:background="@android:color/darker_gray" />-->

<!--            <View-->
<!--                android:layout_width="0.3dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_marginStart="84dp"-->
<!--                android:alpha="0.9"-->
<!--                android:background="@android:color/darker_gray" />-->

            <com.github.mikephil.charting.charts.HorizontalBarChart
                android:id="@+id/horizontal_bar_chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="40dp"/>



        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>